<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HomeworkApp</string>
    <string name="title_homework_detail">Homework Detail</string>

    <!--Homework List Strings-->
    <string name="add_homework_button">+</string>
    <string name="sort_by">Sort by</string>

    <!--Homework Detail Strings-->
    <string name="export">Export</string>
    <string name="homework_done">Completed</string>
    <string name="homework_not_done">In progress</string>
    <string name="details">DETAILS</string>
    <string name="name">Name</string>
    <string name="subject">Subject</string>
    <string name="due_date">Due date</string>
    <string name="remind_date">Reminder</string>
    <string name="priority">Priority</string>
    <string name="low_priority">Low</string>
    <string name="med_priority">Medium</string>
    <string name="high_priority">High</string>
    <string name="notes">Notes</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>

    <!--AlarmReceiver Strings-->
    <string name="notification_title">Homework App</string>
    <string name="notification_message">Homework reminder/due!</string>

    <!--HomeworkDetailFragment Strings-->
    <string name="export_to">Export to</string>
    <string name="confirm_delete">Confirm delete?</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
